grammer and spelling fixes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                     -->
 
 
-                    <p class="subtitle">I'm a recent Computer Science graduate and aspiring Software Developer!</p>
+                    <p class="subtitle">I'm a final-year Computer Science student pursuing software development roles! I have experience
+                        in embedded systems, web development, and automated testing.
+                    </p>
                     <div class="btn-container" style="padding-top: 2.5rem;">
                         <button class="btn" onclick="window.open('./assets/Resume.pdf')">Resume</button>
                         <button class="btn" onclick="location.href='./#contact'">Contact Info</button>
@@ -77,10 +79,12 @@
                 <h1 class="title">About Me</h1>
 
                 <div class="overview-container">
-                    <p class="body-bold">Welcome to my portfolio! I'm currently finishing up my Computer Science degree at the 
-                        Univeristy of Victoria. When I am not coding, I'm often found biking to dance
-                        classes, baking sourdough bread, or exploring new hiking spots. I invite you to delve into a piece 
-                        of my world, and join me on my programming journey!
+                    <p class="header" style="margin: 1rem;">Welcome to my portfolio!</p>
+                    <p class="header"> I'm currently finishing my Computer Science degree at the 
+                        University of Victoria, where I fell in love with programming during my first year at school. When I
+                        am not coding, I'm often found biking to dance and climbing classes, baking sourdough bread, or exploring
+                        new hiking spots across this incredible island I'm fortunate to live on! I invite you to explore a piece 
+                        of my world and follow along my programming journey!
                     </p>
                 </div>
 
@@ -127,7 +131,7 @@
                                 <p class="body-small">Victoria, BC</p>
                                 <p class="body-small">Jan 2025 - Apr 2025</p>
                             </div>
-                            <p class="experience-desc">Contributed to the design, implementation, and testing of a real-time web interface for the HEART software framework for Adaptive Optics systems.</p>
+                            <p class="experience-desc">Contributed to the design, implementation, and testing of a real-time web interface known as the HEART software framework for Adaptive Optics systems.</p>
                         </div>
                         
                         <div class="btn-container experience-btn">
@@ -143,7 +147,7 @@
                                 <p class="body-small">Victoria, BC</p>
                                 <p class="body-small">Sep 2023 - Aug 2024</p>
                             </div>
-                            <p class="experience-desc">Developed and tested software on an embedded linux platform for radio communication devices, included CI/CD automation, networking protocols, and firmware update mechanisms.</p>
+                            <p class="experience-desc">Developed and tested software on an embedded linux platform for radio communication devices, included firmware update mechanisms, networking protocols, and CI/CD automation.</p>
                         </div>
 
                         <div class="btn-container experience-btn">
@@ -159,7 +163,7 @@
                                 <p class="body-small">Livermore, CA</p>
                                 <p class="body-small">June 2017 - Sep 2023</p>
                             </div>
-                            <p class="experience-desc">Demonstrated reliability, attention to detail, and teamwork while delivering high-quality customer service in a fast-paced environment.</p>
+                            <p class="experience-desc">Delivered high-quality customer service while demonstrating reliability, attention to detail, and collaboration skills in a fast-paced environment.</p>
                         </div>
                         
                         <div class="btn-container experience-btn">
@@ -195,7 +199,7 @@
                         <p class="header">Personal Portfolio Website</p>
                         <p class="body-small body-bold">June 2024 - Present</p>
                         <p class="projects-desc">A responsive portfolio website created with JavaScript/HTML/CSS to showcase personal software development
-                            projects, technical skills, and achievements</p>
+                            projects, technical skills, and achievements.</p>
 
                         <div class="btn-container" style="margin-top: auto;">
                             <a href="https://github.com/Antheablz/Web-Portfolio">
@@ -220,7 +224,7 @@
                     <div class="grid-item projects-grid-item">
                         <p class="header">Arduino Projects</p>
                         <p class="body-small body-bold">Sept - Dec 2023</p>
-                        <p class="projects-desc">Various projects built on Arduino microcontrollers in AVR Assembly. Projects include flashing LED lights in Morse Code signal patterns and 
+                        <p class="projects-desc">Various projects built on Arduino microcontrollers in AVR Assembly. Projects included flashing LEDs in Morse Code patterns and 
                             displaying custom messages on a LCD screen.</p>
 
                         <div class="btn-container" style="margin-top: auto;">
