updated alias email

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                                     <img id="email-icon" src="./assets/email.png" alt="email img" class="icon" draggable="false"/>
                                     <p class="subtitle">Email</p>
                                 </div>
-                                <p style="margin-top: 0.75rem;">temp-email@email.com</p>
+                                <p style="margin-top: 0.75rem;">ablaisdev@icloud.com</p>
                             </div>
                         </div>
 
