--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Anthea Blais</title>
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="media.css"/>
+    <link rel="icon" href="./assets/growing-plant.png" draggable="false"/>
+
 </head>
 <body id="body-id">
     <nav id="desktop-nav" class="basic-bar">
